# Transcendence

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  prod_config.toml.example
.github/workflows/: docker-publish.yml
backend/: .env.example  Cargo.toml  config.toml
backend/migrations/2026-03-22-000000-0000_add_tos_accepted_at/: down.sql  up.sql
backend/migrations/2026-03-22-000001-0000_create_tos_versions/: down.sql  up.sql
backend/migrations/2026-03-23-000000-0000_add_email_confirmation/: down.sql  up.sql
backend/migrations/2026-03-25-000000-0000_create_gdpr_request_tables/: down.sql  up.sql
backend/src/: error.rs  main.rs  models.rs  prelude.rs  routers.rs  schema.patch  schema.rs  tos.rs
backend/src/auth/: delete_account.rs  export_data.rs  hoops.rs  mod.rs  router.rs  user.rs  util.rs
backend/src/auth/tests/: delete_account.rs  export_data.rs  mod.rs  register.rs  tos.rs
backend/src/avatar/: router.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/email/: confirm.rs  mock.rs  mod.rs  smtp.rs
backend/src/email/tests/: confirm.rs  mod.rs
backend/src/friends/: mod.rs
backend/src/game/: ffi.rs  lobby.rs  manager.rs  messages.rs  router.rs
backend/src/notifications/: mod.rs
backend/src/routers/: users.rs
backend/src/stream/: stream_manager.rs
backend/src/utils/: nick_cache.rs
backend/src/utils/mock/: api_client.rs  server.rs
docs/: accessibility-compliance.md  deployment.md  friends.md
frontend/: eslint.config.js  index.html  tailwind.config.js
frontend/src/: App.tsx  AppRoutes.tsx  index.css
frontend/src/api/: auth.ts  client.ts  error.ts  friends.ts  lobby.ts  types.ts  user.ts
frontend/src/assets/KayKit_Adventurers_2.0_FREE/Assets/gltf/: dagger.glb
frontend/src/components/: AuthPage.tsx  GameBoard.tsx  Home.tsx  LandingScene.tsx  LobbyPage.tsx  PrivacyPolicy.tsx  SessionManagement.tsx  TermsOfService.tsx
frontend/src/components/GameBoard/: BabylonCanvas.tsx  SimpleGameClient.tsx
frontend/src/components/friends/: AddFriendForm.tsx  FriendsDrawer.tsx
frontend/src/components/modals/: CreateLobbyModal.tsx  DisplacedModal.tsx  EditUserModal.tsx  EmailConfirmationModal.tsx  PublicProfileModal.tsx  TosModal.tsx
frontend/src/components/ui/: Button.tsx  CharacterPicker.tsx  ConnectionStatusBanner.tsx  Dropdown.tsx  ErrorBanner.tsx  InfoBlock.tsx  Input.tsx  Layout.tsx  LoadingSpinner.tsx  Modal.tsx  ModelPreview.tsx  NotificationToast.tsx  Username.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx  FriendsContext.tsx  GameContext.tsx  LobbyContext.tsx  NotificationContext.tsx  StreamContext.tsx
frontend/src/game/: AnimatedCharacter.ts  characterConfigs.ts  types.ts
frontend/src/stream/: types.ts
frontend/tests/fixtures/: users.ts
frontend/tests/helpers/: msw-handlers.ts
frontend/tests/integration/auth/: AuthPage.test.tsx
frontend/tests/integration/friends/: AddFriendForm.test.tsx  FriendsContext.test.tsx  FriendsDrawer.test.tsx
frontend/tests/integration/pages/: TermsOfService.test.tsx
frontend/tests/integration/routes/: AppRoutes.test.tsx  TosAcceptance.test.tsx
frontend/tests/integration/ui/: Dropdown.test.tsx  ErrorBanner.test.tsx  Layout.test.tsx  Modal.test.tsx
